# Fastest_OCR

./: .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
benchmark/: benchmark.py  compare_backends.py
deploy/: glmocr-api.service  glmocr-vllm.service  setup_l4.sh  start_api.sh  start_sglang.sh  start_vllm.sh
src/: __init__.py  config.py  main.py  router.py  server.py
src/handlers/: doc_handler.py  pdf_handler.py  text_handler.py
src/ocr/: engine.py  layout.py  postprocessor.py  preprocessor.py
tests/: test_pipeline.py
