[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "glm-ocr-service"
version = "1.0.0"
description = "Production OCR service powered by GLM-OCR + vLLM/SGLang on GCP L4"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.scripts]
glm-ocr = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
